# parser

./: .gitignore  db.py  models.py  parser.py  pyproject.toml  run_once.py  schedule_test_parser.py  tmp_test.py  utils.py
migrations/: 001_add_performance_indexes.sql
src/schedule_parser/: __init__.py  config.py  db.py  models.py  parser.py  utils.py
